--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Appointments#new</h1>
-<p>Find me in app/views/appointments/new.html.erb</p>
+<h1>A SLOT IS ALREADY TAKEN</h1>
+
+<%= link_to "Home", root_path %>
