--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -16,6 +16,6 @@
 </p>
 <%= @appointment.end_time %>
 
-<%#= link_to "Home", root_path %>
+<%= link_to "Home", root_path %>
 
 <%#= link_to "Calendar", appointments_path %>
